--- a/scss/components/_responsive.scss
+++ b/scss/components/_responsive.scss
@@ -517,7 +517,7 @@
                 }
             }
 
-            &__contents{
+            &__television{
                 display: block;
                 background-size: contain;
                 width: 100%;
@@ -534,12 +534,34 @@
                 }
             }
 
-            &__morecontents{
+            &__onlineshows{
                 display: block;
                 background-size: contain;
                 width: 100%;
                 height: 100%;
                 right:0;
+                // margin-left: 2em;
+                filter: grayscale(0%);
+                text-align: left;
+                // margin-bottom: 0;
+                // margin-left: 0;
+    
+                &::before{
+                    text-align: right;
+                    bottom: 3.2em;
+                    right: 0;
+                    font-size: 3.5em;
+                }
+            }
+
+            &__film{
+                
+                display: block;
+                background-size: contain;
+                width: 100%;
+                height: 100%;
+                // right:0;
+                left: 0;
                 // margin-left: 2em;
                 filter: grayscale(0%);
                 text-align: left;
