added style number class

--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -35,7 +35,7 @@
             }
         
             &__number{
-                // position: absolute;
+                position: absolute;
                 width: 100%;
                 text-align: right;
                 margin-right: 0;
