--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -5,7 +5,7 @@
     transform: translate(-50%, -50%);
     width: 90%;
     height: 100%;
-    padding: 2.5em 2em;
+    padding: 0 2em;
     overflow-x: hidden;
     font-family: $discographyfont;
 
@@ -38,10 +38,10 @@
   
     }
     &__paragraph{
-        position: relative;
+        // position: relative;
         // top: 2em;
         // height: 40%;
-        // width: 40%;
+        width: 100%;
         // margin: 2em 0 10em 0;
         margin: 0 0 10em 0;
         // display: inline-block;
@@ -57,17 +57,19 @@
             // transition: .5s ease-in-out;
             // text-align: right;
             // padding: 2em;
-            background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed;
-            background-size: contain;
+            background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed center;
+            background-size: cover;
             background-blend-mode: saturation;
             // width: 30em;
-            width: 100%;
-            height: 20em;
+            // width: 100%;
+            height: 80%;
             filter: grayscale(100%);
             transition: .5s ease-in-out;
-            text-align: right;
+            // text-align: right;
             padding: 0;
-            position: relative;
+            // position: relative;
+            margin-left: auto;
+            margin-right: auto;
             
 
             &::before{
@@ -482,17 +484,26 @@
             // height: 40em;
             filter: grayscale(100%);
             transition: .5s ease-in-out;
-            text-align: center;
+            // text-align: center;
             padding: 2em;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+                
             
             &::before{
                 content: "Filmography";
                 position: absolute;
                 font-size: 5em;
                 opacity: .5;
-                left: 1.8em;
-                width: 100%;
-                text-align: center;
+                margin-left: -2em;
+                margin-top: -0.3em;
+                // left: 1.8em;
+                // width: 100%;
+                // text-align: center;
+                // margin-left: auto;
+                // margin-right: auto;
+                // text-align: center;
             }
 
             &:hover{
