--- a/scss/main.css
+++ b/scss/main.css
@@ -316,8 +316,8 @@ header {
 .nav .navbar__item ul li:nth-child(2):hover {
   background: url("../../../images/members/wonwoo_attacca_op1.jpg") no-repeat fixed center;
   background-size: cover;
-  -webkit-animation: navItemTwoBackground 2s ease 1 backwards;
-          animation: navItemTwoBackground 2s ease 1 backwards;
+  -webkit-animation: navItemTwoBackground 2s ease 1 forwards;
+          animation: navItemTwoBackground 2s ease 1 forwards;
 }
 
 .nav .navbar__item ul li:nth-child(3) {
@@ -365,19 +365,19 @@ header {
 
 @-webkit-keyframes navItemOneBackground {
   0% {
-    background-size: 0;
+    background-size: 0px 0px;
   }
   100% {
-    background-size: 700px;
+    background-size: 600px;
   }
 }
 
 @keyframes navItemOneBackground {
   0% {
-    background-size: 0;
+    background-size: 0px 0px;
   }
   100% {
-    background-size: 700px;
+    background-size: 600px;
   }
 }
 
@@ -797,7 +797,7 @@ header {
           transform: translate(-50%, -50%);
   width: 90%;
   height: 100%;
-  padding: 2.5em 2em;
+  padding: 0 2em;
   overflow-x: hidden;
   font-family: New York;
 }
@@ -822,23 +822,22 @@ header {
 }
 
 .mainProfile__paragraph {
-  position: relative;
+  width: 100%;
   margin: 0 0 10em 0;
 }
 
 .mainProfile__paragraph__name {
-  background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed;
-  background-size: contain;
+  background: url("../../../images/members/woozi_attacca_op1.jpg") no-repeat fixed center;
+  background-size: cover;
   background-blend-mode: saturation;
-  width: 100%;
-  height: 20em;
+  height: 80%;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
-  text-align: right;
   padding: 0;
-  position: relative;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mainProfile__paragraph__name::before {
@@ -1266,8 +1265,10 @@ header {
           filter: grayscale(100%);
   -webkit-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
-  text-align: center;
   padding: 2em;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .mainProfile__paragraph__filmography::before {
@@ -1275,9 +1276,8 @@ header {
   position: absolute;
   font-size: 5em;
   opacity: .5;
-  left: 1.8em;
-  width: 100%;
-  text-align: center;
+  margin-left: -2em;
+  margin-top: -0.3em;
 }
 
 .mainProfile__paragraph__filmography:hover {
@@ -1424,6 +1424,7 @@ header {
 }
 
 .mainMembers__dets__number {
+  position: absolute;
   width: 100%;
   text-align: right;
   margin-right: 0;
