--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@
 @import './components/pages/mainProfile';
 @import './components/pages/mainMembers';
 @import './components/pages/mainDiscography';
+@import './components/pages/mainCredits';
 @import './components/footer';
 @import './components/responsive';
 
