--- a/scss/components/_backgroundText.scss
+++ b/scss/components/_backgroundText.scss
@@ -1,7 +1,8 @@
 .backgroundText{
     position: absolute;
     // top: 0;
-    right: .3em;
+    right: 0;
+    // right: .3em;
     font-size: 6em;
     z-index: -1;
     opacity: .1;
