--- a/scss/components/pages/_mainCredits.scss
+++ b/scss/components/pages/_mainCredits.scss
@@ -1,3 +1,6 @@
+.loading{
+    display: none;
+}
 .mainCredits{
     font-family: $discographyfont;
     position: absolute;
@@ -10,10 +13,28 @@
     
     // background-color: rgba(128, 128, 128, 0.612);
 
+    // &__fanpage{
+    //     position: absolute;
+    //     top: 0;
+    //     padding-bottom: 1em;
+    //     text-align: center;
+    //     width: 100%;
+
+    //     &__forSvt{
+    //         font-size: 0.8em;
+    //         color:  #f7cac9; // #92a8d1;    
+    //     }
+    // }
+
     &__bio{
         padding: 2em;
-        h3{
-            font-size: 1.5em;
+
+        &__iAm{
+            font-size: 2em;
+        }
+
+        &__name{
+            font-size: 0.8em;
         }
     }
 
@@ -23,6 +44,20 @@
         padding-bottom: 1em;
         text-align: center;
         width: 100%;
+
+        &__fansite{
+            font-size: 0.8em;
+            background-color: #000;
+            background-image: linear-gradient(to bottom, #f7cac9 40%, #92a8d1);
+            // background-image: linear-gradient(45deg, #f7cac9 50%, #92a8d1 50%);
+            background-size: 100%;
+            background-clip: text;
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            -webkit-text-fill-color: transparent; 
+            -moz-text-fill-color: transparent;
+            // color:  #f7cac9; // #92a8d1;    
+        }
         // background-color: aqua;
     }
 }
