--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -7,14 +7,18 @@
     height: 90%;
     padding-top: 2em;
     font-family: $discographyfont;
+    margin-left: auto;
+    margin-right: auto;
     // overflow: auto;
 
     &__dets{
         // position: relative;
+        width: 100%;
         height: 80vh;
         padding-bottom: 0;
         // margin-bottom: 5em;
         // overflow: hidden;
+        // background-color: palegreen;
 
             &__pronunciation{
                 display: none;
@@ -52,6 +56,9 @@
             height: 600px;
             right: 30%;
             margin: 2em;
+            margin-left: auto;
+            margin-right: auto;
+            transition: transform .5s ease;
 
             img{
                 transition: transform .5s ease;
@@ -59,13 +66,26 @@
 
             &:hover img{
                 transform: scale(1.2);
+                transition: transform .5s ease;
             }
 
             &__image{
                 width: 410px;
                 height: 600px;
                 object-fit: cover; 
+                transition: transform .5s ease;
             } 
+
+            &:hover{
+                transition: transform .5s ease;
+                width: 100%;
+                right: 0;
+
+                img{
+                    width: 100%;
+                    transition: transform .5s ease;
+                }
+            }
         }
     
         &__info{
